# nilcc

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  conanfile.txt  conc.cpp  conc.h  controller.cpp  controller.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  matrix.h  nilcc.html  nilcc.js  nilcc.pro  nilcc_ru_RU.ts  qeigenmatrixmodel.cpp  qeigenmatrixmodel.h  stb.h  tablemodel.cpp  tablemodel.h  test-conc.cpp  test-stb.cpp
conan/xlnt/all/: conanfile.py
matplotlibcpp/: matplotlibcpp.h
